--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 	<!-- Our Canvas -->
 	<div id = "container">
+		<p>hello</p>
 		<h2>Highest score: <b id="hscore">0</b></h2>
 		<h2>Your score: <b id="score">0</b></h2>
 		<br>
